# haskell-group

./: .gitignore  README.md
arithmeticPuzzle/: 2014-08-07.rst  2014-08-21.rst  2014-08-28.rst  2014-09-04.rst  2014-09-11.rst  ArithmeticPuzzle.hs  Test.hs  arithmeticPuzzle.cabal
genetics/: Genetics.hs  Makefile  Test.hs  genetics.cabal
genetics/src/: Genetics.hs  Main.hs
tatiphone/: 2014-10-02.rst  TatiPhone.hs  Test.hs
